button clicks are claimed when release happens outiside the widget
Button clicks are claimed with the release event happens outside the widget area. This is not the case in gtk3. Users may have acquired a habit of releasing clicks outside the button to avoid (accidental) clicks (especially for destructive actions)
How to reproduce:
- Click on a GtkButton
- without releasing the click, move the cursor outside of the widget limits, and release the click
Result: The button click is registered and actions/signal handlers are executed. This was tested in gtk4-widget-factory in X11.